projetGL/src/test/deca/syntax/valid/ourTests/test_neg.deca
{
    float x= -11;
    int y= -1;
}