projetGL/src/test/deca/syntax/invalid/ourTests/test_int_min.deca
{
    int x = -2147483648; // 2147483648 on atteint le min
}
